Arreglos de estilos

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,6 @@
       <div class="top-bar"></div>
       <div class="navbar">
         <div class="menu">
-          <a href="./index.html">Inicio</a>
           <div class="dropdown">
             <button class="btn dropdown-toggle myBtn" type="button" data-bs-toggle="dropdown" aria-expanded="false">
               Dulces
@@ -24,9 +23,10 @@
               <li><a class="dropdown-item" href="#">Bollería</a></li>
             </ul>
           </div>
+          <a href="./index.html">Contacto</a>
           <img src="img/yulls_bakery_logo.png" alt="Yulls Bakery Logo" />
-          <a href="...">Contacto</a>
-          <a href="...">Redes</a>
+          <a href="./index.html">Blog</a>
+          <a href="./index.html">Redes</a>
         </div>
       </div>
     </header>
@@ -66,7 +66,7 @@
         </svg>
       </div>
     <!-- CAKES SCROLL -->
-      <div class="section-title"><h1>Cakes</h1></div>
+      <div class="section-title"><h1>Tartas</h1></div>
       <div class="container-fluid product-container">
         <div class="product-item">
           <div class="top-rating"></div>
@@ -139,6 +139,8 @@
           <div class="item-price">Desde 34,99€</div>
         </div>
       </div>
+    <!-- PERSONAL SECTION -->
+     <div class="container-fluid second-section">SECCION DE BLOG Y NOTICIAS</div>
     </main>
     <footer>
       <div class="footer"></div>
