--- a/src/index.html
+++ b/src/index.html
@@ -70,25 +70,74 @@
       <div class="container-fluid product-container">
         <div class="product-item">
           <div class="top-rating"></div>
-          <img class="item-product-img" src="./img/tartas/tarta01.jpg" alt="Imagen de tarta de chocolate" />
+          <img class="item-product-img" src="./img/tartas/tarta01.jpg" alt="Imagen de tarta de chocolate"
+            data-bs-container="body"
+            data-bs-toggle="popover"
+            data-bs-placement="bottom"
+            tabindex="0"
+            data-bs-trigger="focus"
+            data-bs-html="true"
+            data-bs-content='Exquisita creación que se compone de tres capas sedosas y bien equilibradas: una base de crujiente galleta, 
+              seguida por una capa de cremoso chocolate negro, otra de suave chocolate con leche y, finalmente, una de delicado chocolate blanco. 
+              Cada bocado ofrece una sinfonía de sabores y texturas que se derriten en el paladar, haciendo de cada momento una experiencia 
+              sublime. Perfecta para cualquier ocasión especial, esta tarta es el capricho ideal para compartir y disfrutar.
+              <br>
+              <a href="./index.html" class="btn btn-primary">¡La quiero!</a>'/>
           <div class="item-description">Tarta 3 chocolates</div>
           <div class="item-price">Desde 34,99€</div>
         </div>
         <div class="product-item">
           <div class="top-rating">⭐️⭐️⭐️</div>
-          <img class="item-product-img" src="./img/tartas/tarta02.jpg" alt="Imagen de tarta arcoiris" />
+          <img class="item-product-img" src="./img/tartas/tarta02.jpg" alt="Imagen de tarta arcoiris" 
+            data-bs-container="body"
+            data-bs-toggle="popover"
+            data-bs-placement="bottom"
+            tabindex="0"
+            data-bs-trigger="focus"
+            data-bs-html="true"
+            data-bs-content='Sumérgete en un mundo de colores y sabores con nuestra espectacular Tarta de Arcoíris. Esta deliciosa creación se compone de capas esponjosas 
+              y vibrantes en cada tono del arcoíris, unidas por una suave crema de vainilla. Decorada con un delicado frosting blanco y coloridos confites, esta tarta no 
+              solo es un festín para el paladar, sino también un deleite visual. Perfecta para celebrar cualquier ocasión especial, 
+              especialmente cumpleaños y eventos infantiles, nuestra Tarta de Arcoíris hará que cada momento sea inolvidable.
+            <br>
+            <a href="./index.html" class="btn btn-primary">¡La quiero!</a>'/>
           <div class="item-description">Tarta Arcoiris</div>
           <div class="item-price">Desde 39,99€</div>
         </div>
         <div class="product-item">
           <div class="top-rating"></div>
-          <img class="item-product-img" src="./img/tartas/tarta03.jpg" alt="Imagen de tarta de chocolate" />
+          <img class="item-product-img" src="./img/tartas/tarta03.jpg" alt="Imagen de tarta de chocolate" 
+            data-bs-container="body"
+            data-bs-toggle="popover"
+            data-bs-placement="bottom"
+            tabindex="0"
+            data-bs-trigger="focus"
+            data-bs-html="true"
+            data-bs-content='Disfruta de la tradicional y exquisita Tarta San Marcos, un clásico de la repostería española. 
+              Esta delicia se compone de esponjosos bizcochos bañados en almíbar, rellenos de una suave crema pastelera y nata montada. 
+              Coronada con una capa de yema tostada y decorada con una ligera lluvia de azúcar glas, cada bocado de esta tarta es una mezcla 
+              perfecta de dulzura y textura. Ideal para cualquier celebración o como postre especial, la Tarta San Marcos es un verdadero 
+              placer que no puedes dejar de probar.
+            <br>
+            <a href="./index.html" class="btn btn-primary">¡La quiero!</a>'/>
           <div class="item-description">Tarta San Marcos</div>
           <div class="item-price">Desde 34,99€</div>
         </div>
         <div class="product-item">
           <div class="top-rating">⭐️⭐️⭐️⭐️</div>
-          <img class="item-product-img" src="./img/tartas/tarta04.jpg" alt="Imagen de tarta de chocolate" />
+          <img class="item-product-img" src="./img/tartas/tarta04.jpg" alt="Imagen de tarta de chocolate"
+            data-bs-container="body"
+            data-bs-toggle="popover"
+            data-bs-placement="bottom"
+            tabindex="0"
+            data-bs-trigger="focus"
+            data-bs-html="true"
+            data-bs-content='La irresistible Tarta de Queso, una delicia cremosa que deleita los sentidos. Con una base crujiente 
+            de galleta y una rica mezcla de quesos frescos y suaves, esta tarta ofrece una textura sedosa y un sabor 
+            equilibrado. Horneada a la perfección y ligeramente dorada en la superficie, cada porción es un placer indulgente. 
+            Perfecta para cualquier ocasión, nuestra Tarta de Queso es la elección ideal para los amantes de los postres tradicionales con un toque gourmet.
+            <br>
+            <a href="./index.html" class="btn btn-primary">¡La quiero!</a>'/>
           <div class="item-description">Tarta de Queso <br>con arándanos</div>
           <div class="item-price">Desde 34,99€</div>
         </div>
@@ -139,8 +188,8 @@
           <div class="item-price">Desde 34,99€</div>
         </div>
       </div>
-    <!-- PERSONAL SECTION -->
-     <div class="container-fluid second-section">SECCION DE BLOG Y NOTICIAS</div>
+    <!-- NEWS -->
+      <div class="container-fluid news-section">SECCION DE BLOG Y NOTICIAS</div>
     </main>
     <footer>
       <div class="footer"></div>
