Optimizado de imagenes

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,8 @@
             <ul class="dropdown-menu dropdown-menu-dark">
               <li><a class="dropdown-item" href="#tartas">Tartas</a></li>
               <li><a class="dropdown-item" href="#cupcakes">Cupcakes</a></li>
-              <li><a class="dropdown-item" href="#galletas">Galletas</a></li>
-              <li><a class="dropdown-item" href="#">Dulces</a></li>
-              <li><a class="dropdown-item" href="#">Bollería</a></li>
+              <li><a class="dropdown-item" href="#sweets">Dulces</a></li>
+              <li><a class="dropdown-item" href="#sweets">Galletas</a></li>
             </ul>
           </div>
           <a href="./index.html">Blog</a>
@@ -66,7 +65,7 @@
         </svg>
       </div>
     <!-- CAKES SCROLL -->
-      <div class="section-title"><h1>Tartas</h1></div>
+      <div class="section-title" aria-labelledby="tartas" id="tartas" role="region"><h1>Tartas</h1></div>
       <div class="container-fluid product-container">
         <div class="product-item">
           <div class="top-rating"></div>
@@ -79,8 +78,7 @@
             data-bs-html="true"
             data-bs-content='Exquisita creación que se compone de tres capas sedosas y bien equilibradas: una base de crujiente galleta, 
               seguida por una capa de cremoso chocolate negro, otra de suave chocolate con leche y, finalmente, una de delicado chocolate blanco. 
-              Cada bocado ofrece una sinfonía de sabores y texturas que se derriten en el paladar, haciendo de cada momento una experiencia 
-              sublime. Perfecta para cualquier ocasión especial, esta tarta es el capricho ideal para compartir y disfrutar.
+              Cada bocado ofrece una sinfonía de sabores y texturas que se derriten en el paladar. Perfecta para cualquier ocasión especial.
               <br>
               <a href="./index.html" class="btn btn-primary">¡La quiero!</a>'/>
           <div class="item-description">Tarta 3 chocolates</div>
@@ -95,10 +93,9 @@
             tabindex="0"
             data-bs-trigger="focus"
             data-bs-html="true"
-            data-bs-content='Sumérgete en un mundo de colores y sabores con nuestra espectacular Tarta de Arcoíris. Esta deliciosa creación se compone de capas esponjosas 
-              y vibrantes en cada tono del arcoíris, unidas por una suave crema de vainilla. Decorada con un delicado frosting blanco y coloridos confites, esta tarta no 
-              solo es un festín para el paladar, sino también un deleite visual. Perfecta para celebrar cualquier ocasión especial, 
-              especialmente cumpleaños y eventos infantiles, nuestra Tarta de Arcoíris hará que cada momento sea inolvidable.
+            data-bs-content='Sumérgete en un mundo de colores y sabores con nuestra espectacular Tarta de Arcoíris. Se compone de capas esponjosas 
+              y vibrantes en cada tono del arcoíris, unidas por una suave crema de vainilla. Decorada con un delicado frosting blanco y coloridos confites. 
+              Un deleite visual y de sabor. Perfecta para celebrar cualquier ocasión especial.
             <br>
             <a href="./index.html" class="btn btn-primary">¡La quiero!</a>'/>
           <div class="item-description">Tarta Arcoiris</div>
@@ -114,10 +111,9 @@
             data-bs-trigger="focus"
             data-bs-html="true"
             data-bs-content='Disfruta de la tradicional y exquisita Tarta San Marcos, un clásico de la repostería española. 
-              Esta delicia se compone de esponjosos bizcochos bañados en almíbar, rellenos de una suave crema pastelera y nata montada. 
+              Esponjosos bizcochos bañados en almíbar, rellenos de una suave crema pastelera y nata montada. 
               Coronada con una capa de yema tostada y decorada con una ligera lluvia de azúcar glas, cada bocado de esta tarta es una mezcla 
-              perfecta de dulzura y textura. Ideal para cualquier celebración o como postre especial, la Tarta San Marcos es un verdadero 
-              placer que no puedes dejar de probar.
+              perfecta de dulzura y textura. Ideal para cualquier celebración o como postre especial.
             <br>
             <a href="./index.html" class="btn btn-primary">¡La quiero!</a>'/>
           <div class="item-description">Tarta San Marcos</div>
@@ -134,8 +130,8 @@
             data-bs-html="true"
             data-bs-content='La irresistible Tarta de Queso, una delicia cremosa que deleita los sentidos. Con una base crujiente 
             de galleta y una rica mezcla de quesos frescos y suaves, esta tarta ofrece una textura sedosa y un sabor 
-            equilibrado. Horneada a la perfección y ligeramente dorada en la superficie, cada porción es un placer indulgente. 
-            Perfecta para cualquier ocasión, nuestra Tarta de Queso es la elección ideal para los amantes de los postres tradicionales con un toque gourmet.
+            equilibrado. Ligeramente dorada en la superficie, cada porción es un placer indulgente. 
+            Perfecta para cualquier ocasión.
             <br>
             <a href="./index.html" class="btn btn-primary">¡La quiero!</a>'/>
           <div class="item-description">Tarta de Queso <br>con arándanos</div>
@@ -148,48 +144,95 @@
           <div class="item-price">Desde 34,99€</div>
         </div>
       </div>
-    <!-- CUPCAKES & SWEETS SCROLL -->
-      <div class="section-title"><h1>Cupcakes y dulces</h1></div>
+    <!-- CUPCAKES SCROLL -->
+      <div class="section-title" aria-labelledby="cupcakes" id="cupcakes" role="region"><h1>Cupcakes</h1></div>
       <div class="container-fluid product-container">
         <div class="product-item">
           <div class="top-rating"></div>
-          <img class="item-product-img" src="./img/cupcakes & cookies/cupcake01.jpg" alt="Imagen de tarta de chocolate" />
+          <img class="item-product-img" src="./img/cupcakes/cupcake01.jpg" alt="Imagen de tarta de chocolate" />
           <div class="item-description">Cupcake Chocolate</div>
           <div class="item-price">Desde 34,99€</div>
         </div>
         <div class="product-item">
           <div class="top-rating"></div>
-          <img class="item-product-img" src="./img/cupcakes & cookies/cupcake02.jpg" alt="Imagen de tarta arcoiris" />
+          <img class="item-product-img" src="./img/cupcakes/cupcake02.jpg" alt="Imagen de tarta arcoiris" />
           <div class="item-description">Cupcake Fiesta Nube</div>
           <div class="item-price">Desde 39,99€</div>
         </div>
         <div class="product-item">
           <div class="top-rating">⭐️⭐️⭐️</div>
-          <img class="item-product-img" src="./img/cupcakes & cookies/cupcake03.jpg" alt="Imagen de tarta de chocolate" />
+          <img class="item-product-img" src="./img/cupcakes/cupcake03.jpg" alt="Imagen de tarta de chocolate" />
           <div class="item-description">Cupcake Velvet</div>
           <div class="item-price">Desde 34,99€</div>
         </div>
         <div class="product-item">
           <div class="top-rating"></div>
-          <img class="item-product-img" src="./img/cupcakes & cookies/cupcake04.jpg" alt="Imagen de tarta de chocolate" />
+          <img class="item-product-img" src="./img/cupcakes/cupcake04.jpg" alt="Imagen de tarta de chocolate" />
           <div class="item-description">Cupcake Fresa</div>
           <div class="item-price">Desde 34,99€</div>
         </div>
         <div class="product-item">
-          <div class="top-rating">⭐️⭐️⭐️⭐️</div>
-          <img class="item-product-img" src="./img/cupcakes & cookies/cookie01.jpg" alt="Imagen de tarta de chocolate" />
-          <div class="item-description">Coockies rellenas</div>
-          <div class="item-price">Desde 34,99€</div>
+          <div class="top-rating"></div>
+          <img class="item-product-img" src="./img/cupcakes/cupcake02.jpg" alt="Imagen de tarta arcoiris" />
+          <div class="item-description">Cupcake Fiesta Nube</div>
+          <div class="item-price">Desde 39,99€</div>
         </div>
         <div class="product-item">
           <div class="top-rating"></div>
-          <img class="item-product-img" src="./img/cupcakes & cookies/cookie02.jpg" alt="Imagen de tarta de chocolate" />
-          <div class="item-description">Cookies de chocolate</div>
+          <img class="item-product-img" src="./img/cupcakes/cupcake01.jpg" alt="Imagen de tarta de chocolate" />
+          <div class="item-description">Cupcake Chocolate</div>
           <div class="item-price">Desde 34,99€</div>
         </div>
       </div>
+    <!-- COOKIES AND SWEETS -->
+    <div class="section-title" aria-labelledby="sweets" id="sweets" role="region"><h1>Dulces y galletas</h1></div>
+    <div class="container-fluid product-container">
+      <div class="product-item">
+        <div class="top-rating">⭐️⭐️⭐️⭐️</div>
+        <img class="item-product-img" src="./img/cookies_sweets/cookie01.jpg" alt="Imagen de tarta de chocolate" />
+        <div class="item-description">Coockies rellenas</div>
+        <div class="item-price">Desde 34,99€</div>
+      </div>
+      <div class="product-item">
+        <div class="top-rating"></div>
+        <img class="item-product-img" src="./img/cookies_sweets/cookie02.jpg" alt="Imagen de tarta de chocolate" />
+        <div class="item-description">Cookies de chocolate</div>
+        <div class="item-price">Desde 34,99€</div>
+      </div>
+      <div class="product-item">
+        <div class="top-rating">⭐️⭐️⭐️</div>
+        <img class="item-product-img" src="./img/cupcakes/cupcake03.jpg" alt="Imagen de tarta de chocolate" />
+        <div class="item-description">Cupcake Velvet</div>
+        <div class="item-price">Desde 34,99€</div>
+      </div>
+      <div class="product-item">
+        <div class="top-rating"></div>
+        <img class="item-product-img" src="./img/cupcakes/cupcake04.jpg" alt="Imagen de tarta de chocolate" />
+        <div class="item-description">Cupcake Fresa</div>
+        <div class="item-price">Desde 34,99€</div>
+      </div>
+      <div class="product-item">
+        <div class="top-rating">⭐️⭐️⭐️⭐️</div>
+        <img class="item-product-img" src="./img/cookies_sweets/cookie01.jpg" alt="Imagen de tarta de chocolate" />
+        <div class="item-description">Coockies rellenas</div>
+        <div class="item-price">Desde 34,99€</div>
+      </div>
+      <div class="product-item">
+        <div class="top-rating"></div>
+        <img class="item-product-img" src="./img/cookies_sweets/cookie02.jpg" alt="Imagen de tarta de chocolate" />
+        <div class="item-description">Cookies de chocolate</div>
+        <div class="item-price">Desde 34,99€</div>
+      </div>
+    </div>
     <!-- NEWS -->
       <div class="container-fluid news-section">SECCION DE BLOG Y NOTICIAS</div>
+      <div class="custom-shape-divider-top-1718731153">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
+            <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
+            <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
+        </svg>
+      </div>
     </main>
     <footer>
       <div class="footer"></div>
