Seccion de noticias añadida

--- a/src/index.html
+++ b/src/index.html
@@ -225,7 +225,55 @@
       </div>
     </div>
     <!-- NEWS -->
-      <div class="container-fluid news-section">SECCION DE BLOG Y NOTICIAS</div>
+    <div class="section-title" aria-labelledby="news" id="news" role="region"><h1>Novedades</h1></div>
+      <div class="container-fluid news-section">
+        <div class="accordion " id="accordionPanelsStayOpenExample">
+          <div class="accordion-item">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                <h3>Novedades en Yull's Bakery: ¡Tarta San Marcos! 🍰</h3>
+              </button>
+            </h2>
+            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+              <div class="accordion-body">
+                <div class="container-fluid news-container">
+                  <img class="item-product-img" src="./img/tartas/tarta03.jpg" />
+                  <div class="news-text">Estamos emocionados de presentarte nuestra última incorporación a la familia de postres: la <strong>Tarta de San Marcos.</strong>
+                    <br><br>Con un irresistible bizcocho esponjoso impregnado de almendra y un toque de esencia de naranja, esta tarta captura la esencia misma de la tradición y el sabor artesanal.
+                    Cada bocado te transportará a la cocina de un maestro pastelero, donde cada ingrediente ha sido cuidadosamente seleccionado para ofrecerte una experiencia gastronómica única. 
+                    Su decoración elegante con almendras laminadas y una capa de glaseado sutilmente dulce garantizan que cada porción sea una verdadera delicia para los sentidos.
+                    <br><br>Ideal para cualquier ocasión especial o simplemente para darte un capricho dulce, la Tarta de San Marcos está disponible ahora en nuestra web para que la disfrutes en la comodidad de tu hogar. 
+                    <br>No esperes más para deleitarte con este clásico reinventado.
+                    <br>¡Déjate cautivar por el sabor incomparable de nuestra <strong>Tarta de San Marcos!</strong></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                <h3>¡Novedades Yull's Bakery!</h3>
+              </button>
+            </h2>
+            <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                <h3>¡Novedades Yull's Bakery!</h3>
+              </button>
+            </h2>
+            <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="custom-shape-divider-top-1718731153">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
             <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
