Arreglos en seccion news

--- a/src/index.html
+++ b/src/index.html
@@ -266,7 +266,7 @@
           <div class="accordion-item">
             <h3 class="accordion-header">
               <button class="accordion-button collapsed news-text-title" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                Algo muy especial para el Día de la Madre
+                🌹 Algo muy especial para el Día de la Madre 🌹
               </button>
             </h3>
             <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
@@ -279,7 +279,7 @@
           <div class="accordion-item">
             <h3 class="accordion-header">
               <button class="accordion-button collapsed news-text-title" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                ¡Novedades Yull's Bakery!
+                🧁 🌈 ¡Nuevos muffins! 
               </button>
             </h3>
             <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
@@ -289,6 +289,7 @@
             </div>
           </div>
         </div>
+        <!-- WAVES INFERIORES -->
         <div class="custom-shape-divider-top-1718731153">
           <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
               <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
@@ -297,7 +298,6 @@
           </svg>
         </div>
       </div>
-
     </main>
     <footer>
       <div class="footer"></div>
